--- a/helm/retrotro/Chart.yaml
+++ b/helm/retrotro/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: retrotro
 description: RetroTro - Agile retrospective tool
 type: application
-version: 0.1.0
-appVersion: "0.1.0"
+version: "0.0.1"
+appVersion: "0.0.1"
 keywords:
   - retrospective
   - agile
