--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,9 +3,17 @@
   "release-type": "simple",
   "include-component-in-tag": true,
   "include-v-in-tag": true,
+  "plugins": [
+    {
+      "type": "linked-versions",
+      "groupName": "app",
+      "components": ["retrotro-backend", "retrotro-frontend", "retrotro-helm"]
+    }
+  ],
   "packages": {
     "backend": {
       "release-type": "go",
+      "component": "retrotro-backend",
       "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
@@ -22,6 +30,7 @@
     },
     "frontend": {
       "release-type": "node",
+      "component": "retrotro-frontend",
       "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
@@ -38,29 +47,31 @@
     },
     "helm/retrotro": {
       "release-type": "helm",
+      "component": "retrotro-helm",
       "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
+      "extra-files": [
+        {
+          "type": "yaml",
+          "path": "Chart.yaml",
+          "jsonpath": "$.appVersion"
+        },
+        {
+          "type": "yaml",
+          "path": "values.yaml",
+          "jsonpath": "$.backend.image.tag"
+        },
+        {
+          "type": "yaml",
+          "path": "values.yaml",
+          "jsonpath": "$.frontend.image.tag"
+        }
+      ],
       "changelog-sections": [
         { "type": "feat", "section": "Features" },
         { "type": "fix", "section": "Bug Fixes" },
         { "type": "chore", "section": "Miscellaneous", "hidden": true }
-      ]
-    },
-    "terraform-provider-retrotro": {
-      "release-type": "go",
-      "changelog-path": "CHANGELOG.md",
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
-      "changelog-sections": [
-        { "type": "feat", "section": "Features" },
-        { "type": "fix", "section": "Bug Fixes" },
-        { "type": "perf", "section": "Performance Improvements" },
-        { "type": "refactor", "section": "Code Refactoring" },
-        { "type": "docs", "section": "Documentation", "hidden": true },
-        { "type": "chore", "section": "Miscellaneous", "hidden": true },
-        { "type": "test", "section": "Tests", "hidden": true },
-        { "type": "ci", "section": "CI/CD", "hidden": true }
       ]
     }
   }
