--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Push to GHCR
         run: |
-          helm push retrotro-${{ inputs.version }}.tgz oci://${{ env.REGISTRY }}/jycamier
+          helm push retrotro-helm-${{ inputs.version }}.tgz oci://${{ env.REGISTRY }}/jycamier
 
       - name: Summary
         run: |
