--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,6 +1,5 @@
 {
-  "backend": "0.1.0",
-  "frontend": "0.1.0",
-  "helm/retrotro": "0.1.0",
-  "terraform-provider-retrotro": "0.1.0"
+  "backend": "0.0.1",
+  "frontend": "0.0.1",
+  "helm/retrotro": "0.0.1"
 }
