--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,18 +17,18 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
-      backend_release_created: ${{ steps.release.outputs['backend--release_created'] }}
-      backend_tag_name: ${{ steps.release.outputs['backend--tag_name'] }}
-      backend_version: ${{ steps.release.outputs['backend--version'] }}
-      frontend_release_created: ${{ steps.release.outputs['frontend--release_created'] }}
-      frontend_tag_name: ${{ steps.release.outputs['frontend--tag_name'] }}
-      frontend_version: ${{ steps.release.outputs['frontend--version'] }}
-      helm_release_created: ${{ steps.release.outputs['helm/retrotro--release_created'] }}
-      helm_tag_name: ${{ steps.release.outputs['helm/retrotro--tag_name'] }}
-      helm_version: ${{ steps.release.outputs['helm/retrotro--version'] }}
-      terraform_release_created: ${{ steps.release.outputs['terraform-provider-retrotro--release_created'] }}
-      terraform_tag_name: ${{ steps.release.outputs['terraform-provider-retrotro--tag_name'] }}
-      terraform_version: ${{ steps.release.outputs['terraform-provider-retrotro--version'] }}
+      backend_release_created: ${{ steps.release.outputs['retrotro-backend--release_created'] }}
+      backend_tag_name: ${{ steps.release.outputs['retrotro-backend--tag_name'] }}
+      backend_version: ${{ steps.release.outputs['retrotro-backend--version'] }}
+      frontend_release_created: ${{ steps.release.outputs['retrotro-frontend--release_created'] }}
+      frontend_tag_name: ${{ steps.release.outputs['retrotro-frontend--tag_name'] }}
+      frontend_version: ${{ steps.release.outputs['retrotro-frontend--version'] }}
+      helm_release_created: ${{ steps.release.outputs['retrotro-helm--release_created'] }}
+      helm_tag_name: ${{ steps.release.outputs['retrotro-helm--tag_name'] }}
+      helm_version: ${{ steps.release.outputs['retrotro-helm--version'] }}
+      terraform_release_created: ${{ steps.release.outputs['retrotro-terraform--release_created'] }}
+      terraform_tag_name: ${{ steps.release.outputs['retrotro-terraform--tag_name'] }}
+      terraform_version: ${{ steps.release.outputs['retrotro-terraform--version'] }}
     steps:
       - name: Release Please
         id: release
@@ -47,28 +47,6 @@ jobs:
       version: ${{ needs.release-please.outputs.backend_version }}
       tag: ${{ needs.release-please.outputs.backend_tag_name }}
     secrets: inherit
-
-  update-helm-appversion:
-    name: Update Helm appVersion
-    needs: [release-please, trigger-backend-build]
-    if: needs.release-please.outputs.backend_release_created == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Update appVersion in Chart.yaml
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq -i '.appVersion = "${{ needs.release-please.outputs.backend_version }}"' helm/retrotro/Chart.yaml
-
-      - name: Commit and push
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email github-actions[bot]@users.noreply.github.com
-          git add helm/retrotro/Chart.yaml
-          git commit -m "chore(helm): update appVersion to ${{ needs.release-please.outputs.backend_version }}" || true
-          git push
 
   trigger-frontend-build:
     name: Trigger Frontend Build
