ci(backend): fix snapshot build

--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -92,6 +92,7 @@ jobs:
         env:
           KO_DOCKER_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GORELEASER_CURRENT_TAG: v0.0.0
         run: |
           goreleaser release --clean --snapshot --skip=validate --skip=announce
 
