chore: add e2e test infrastructure and fix Docker/proxy configuration
- Add Playwright e2e test suite with multi-user retro scenarios
- Fix Dockerfile: upgrade Go 1.22 to 1.24, remove unused migrations copy
- Fix docker-compose: remove migrations volume, correct frontend port
- Add Caddyfile reverse proxy rules for /api, /auth, /ws
- Sort frontend package.json dependencies alphabetically
- Update .gitignore for test artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,13 @@ helm/retrotro/charts/
 *.key
 secrets/
 
+# Tests
+tests/node_modules/
+tests/test-results/
+tests/playwright-report/
+
 # Temp files
 tmp/
 temp/
+
+helm/retrotro/Chart.lock
