--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@tanstack/react-query": "^5.51.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.426.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "zustand": "^4.5.4",
-    "@tanstack/react-query": "^5.51.1",
-    "lucide-react": "^0.426.0",
-    "clsx": "^2.1.1",
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
