--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -4,15 +4,27 @@
         respond "OK" 200
     }
 
-    # Reverse proxy API and auth to backend
+    # Reverse proxy API and auth to backend (supports --scale backend=N)
     handle /api/* {
-        reverse_proxy backend:8080
+        reverse_proxy backend:8080 {
+            lb_policy round_robin
+            health_uri /health
+            health_interval 5s
+        }
     }
     handle /auth/* {
-        reverse_proxy backend:8080
+        reverse_proxy backend:8080 {
+            lb_policy round_robin
+            health_uri /health
+            health_interval 5s
+        }
     }
     handle /ws {
-        reverse_proxy backend:8080
+        reverse_proxy backend:8080 {
+            lb_policy round_robin
+            health_uri /health
+            health_interval 5s
+        }
     }
 
     # Static files and SPA
