--- a/helm/retrotro/templates/secrets.yaml
+++ b/helm/retrotro/templates/secrets.yaml
@@ -15,3 +15,6 @@ stringData:
   {{- if .Values.oidc.clientSecret }}
   oidc-client-secret: {{ .Values.oidc.clientSecret | quote }}
   {{- end }}
+  {{- if .Values.backend.bus.natsCredentials.content }}
+  nats-credentials: {{ .Values.backend.bus.natsCredentials.content | quote }}
+  {{- end }}
