--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
       timeout: 5s
       retries: 5
 
+  nats:
+    image: nats:latest
+    ports:
+      - "4222:4222"
+    healthcheck:
+      test: ["CMD", "nats-server", "--help"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+
   backend:
     build:
       context: ./backend
@@ -33,6 +43,8 @@ services:
       OIDC_REDIRECT_URL: "${OIDC_REDIRECT_URL:-http://localhost/auth/callback}"
       OIDC_JIT_ENABLED: "${OIDC_JIT_ENABLED:-true}"
       OIDC_JIT_GROUPS_CLAIM: "${OIDC_JIT_GROUPS_CLAIM:-groups}"
+      BUS_TYPE: "${BUS_TYPE:-gochannel}"
+      NATS_URL: "${NATS_URL:-}"
     depends_on:
       postgres:
         condition: service_healthy
