--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,12 @@ services:
       OIDC_REDIRECT_URL: "${OIDC_REDIRECT_URL:-http://localhost/auth/callback}"
       OIDC_JIT_ENABLED: "${OIDC_JIT_ENABLED:-true}"
       OIDC_JIT_GROUPS_CLAIM: "${OIDC_JIT_GROUPS_CLAIM:-groups}"
-      BUS_TYPE: "${BUS_TYPE:-gochannel}"
-      NATS_URL: "${NATS_URL:-}"
+      BUS_TYPE: "${BUS_TYPE:-nats}"
+      NATS_URL: "${NATS_URL:-nats://nats:4222}"
     depends_on:
       postgres:
+        condition: service_healthy
+      nats:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
